# Rover

./: .gitignore  README.md  server.py
Code/Raspberry/udpsocket/: .gitignore  CMakeLists.txt  README.md  udpclient.c  udpserver.c
Code/Raspberry/udpsocket/include/: udpClientClass.h
Code/Raspberry/udpsocket/src/: CMakeLists.txt  serialtest.c  udpclient.c  udpserver.c
Code/Raspberry/udpsocket/src/Test_Code/: udpClientClass.cpp  udpclient_test.cpp
Code/Rover_Utils/: .gitignore  RoverTTS.py
Code/Server/ServerPython/: Udp_server.py  WebcamReciver.py
Code/Server/ServerPython/Web controller/: Video_server.py  index.html  main.js  path.json  video_grabber.py  webServer.py  workspace.code-workspace
Code/Teensy/TeensyRover/: CMakeLists.txt  README.md  platformio.ini
Code/Teensy/TeensyRover/src/: main.cpp
Code/Udp_Client/udpsocket/: .gitignore  CMakeLists.txt  README.md
Code/Udp_Client/udpsocket/lib/include/: circBuffer.h  udpClientClass.h
Code/Udp_Client/udpsocket/lib/src/: circBuffer.cpp
Code/Udp_Client/udpsocket/src/: CMakeLists.txt
Code/Udp_Client/udpsocket/src/Controller/: CMakeLists.txt  udpClientController.cpp  udpServer.c
Code/Udp_Client/udpsocket/src/Rover/: CMakeLists.txt  main.cpp  udpclientrover.cpp
Code/VideoServer/: roverSide.py  serverEnd.py
GCode/: TT_Gearbox_Wrap_around_Plate.gcode  TT_d20v3.gcode
PCB/RaspberryPiHat/RPHat/: RPHat-Edge_Cuts.gbr  RPHat-F_Cu.gbr  RPHat-F_Mask.gbr  RPHat-F_Paste.gbr  RPHat-F_SilkS.gbr  RPHat-cache.lib  RPHat-job.gbrjob  RPHat.drl  RPHat.kicad_pcb  RPHat.kicad_pcb-bak  RPHat.pro  RPHat.sch  RPHat.sch-bak  fp-info-cache
PCB/RaspberryPiHat_V2/RPHat_V2/: Hall Effect Schematics.sch  Hall Effect Schematics.sch-bak  RPHat_V2-cache.lib  RPHat_V2-rescue.lib  RPHat_V2.kicad_pcb  RPHat_V2.kicad_pcb-bak  RPHat_V2.pro  RPHat_V2.sch  RPHat_V2.sch-bak  Sensors.sch  Sensors.sch-bak  Servos_Motors.sch  Servos_Motors.sch-bak  User_Created.lib  _autosave-RPHat_V2.sch  _autosave-Servos_Motors.sch  fp-info-cache  sym-lib-table
PCB/RaspberryPiHat_V2/RPHat_V2/Gerber/: RPHat_V2-B_Cu.gbl  RPHat_V2-B_Mask.gbs  RPHat_V2-B_Paste.gbp  RPHat_V2-B_SilkS.gbo  RPHat_V2-Edge_Cuts.gm1  RPHat_V2-F_Cu.gtl  RPHat_V2-F_Mask.gts  RPHat_V2-F_Paste.gtp  RPHat_V2-F_SilkS.gto  RPHat_V2-In1_Cu.g2  RPHat_V2-In2_Cu.g3  RPHat_V2-NPTH-drl_map.ps  RPHat_V2-NPTH.drl  RPHat_V2-PTH-drl_map.ps  RPHat_V2-PTH.drl
PCB/RaspberryPiHat_V2/RPHat_V2/User.pretty/: CSS2H-3920.kicad_mod  GY-NEO6MV2.kicad_mod
PCB/RaspberryPiHat_V2/TXB0108DQSR/: part_info.txt
PCB/RaspberryPiHat_V2/TXB0108DQSR/Allegro/: TXB0108DQSR.dra  r100_20.pad  r110_20.pad  txb0108dqsr.psm
PCB/RaspberryPiHat_V2/TXB0108DQSR/Altium/: TXB0108DQSR.epw
PCB/RaspberryPiHat_V2/TXB0108DQSR/CADSTAR/: TXB0108DQSR.cpa  TXB0108DQSR.csa  TXB0108DQSR.lib
PCB/RaspberryPiHat_V2/TXB0108DQSR/CR-5000/: TXB0108DQSR.cdf  TXB0108DQSR.ftf
Snow+Tank+from+RCTESTFLIGHT/: LICENSE.txt  README.txt
Snow+Tank+from+RCTESTFLIGHT/files/: 56_to_1_housing.3mf
(+33 files in other folders)
